# hitchdb

./: .gitignore  MANIFEST.in  PROJECT_NAME  README.md  docker-compose.yml  key.sh  pyproject.toml
.github/workflows/: regression.yml
docs/public/: changelog.md  index.md
docs/public/approach/: index.md
docs/public/using/: index.md  postgres-types.md  quickstart.md
docs/src/: index.md
hitch/: Dockerfile-hitch  debugrequirements.txt  docstory.yml  engine.py  hitchreqs.in  hitchreqs.txt  key.py
hitch/story/: defaults.story  postgres-types.story  quickstart.story
hitchdb/: __init__.py  db.py  fixture.py  tbls.py  utils.py
hitchdbfixture/: __init__.py  db.py  tbls.py
